pillars card group added done

--- a/index.html
+++ b/index.html
@@ -27,6 +27,37 @@
       </div>
     </div>
   </header>
+  <main>
+    <!-- pillars section -->
+    <section class="pillars">
+      <h1>Pillars of "Bangladesh 2.0"</h1>
+      <div class="pillars-card-group">
+        <div class="pillars-card">
+          <img src="assets/card-icon.png" alt="card-icon">
+          <h2>innovation</h2>
+          <p>Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+        </div>
+        <div class="pillars-card">
+          <img src="assets/card-icon.png" alt="card-icon">
+          <h2>Sustainability</h2>
+          <p>Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+        </div>
+        <div class="pillars-card">
+          <img src="assets/card-icon.png" alt="card-icon">
+          <h2>Infrastructure</h2>
+          <p>Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+        </div>
+        <div class="pillars-card">
+          <img src="assets/card-icon.png" alt="card-icon">
+          <h2>Empowerment</h2>
+          <p>Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+        </div>
+      </div>
+    </section>
+  </main>
+  <footer>
+
+  </footer>
 </body>
 
 </html>
