--- a/index.html
+++ b/index.html
@@ -54,6 +54,39 @@
         </div>
       </div>
     </section>
+    <!-- Vision of Future Section -->
+    <section class="future">
+      <h1>The Vision of Future</h1>
+      <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting
+        inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and
+        robust infrastructure, the country is set to become a global model of development.</p>
+      <div class="future-card-group">
+        <div class="future-card future-card-1">
+          <img src="assets/card-icon.png" alt="card-icon">
+          <h2>Digital Transformation</h2>
+          <p>Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.
+          </p>
+          <a class="card-a-1" href="#">Learn More</a>
+        </div>
+        <div class="future-card future-card-2">
+          <img src="assets/card-icon.png" alt="card-icon">
+          <h2>Green Energy</h2>
+          <p>Investments in solar and wind energy to ensure a sustainable and eco-friendly future to established electricity system.</p>
+          <a class="card-a-2" href="#">Learn More</a>
+        </div>
+        <div class="future-card future-card-3">
+          <img src="assets/card-icon.png" alt="card-icon">
+          <h2>Modern Infrastructure</h2>
+          <p>Building state-of-the-art infrastructure to support economic growth and global competitiveness.</p>
+          <a class="card-a-3" href="#">Learn More</a>
+        </div>
+      </div>
+      <div class="yunus-speech">
+        <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quas, ducimus labore sequi quos deserunt optio id repellendus tempora veniam amet porro corporis exercitationem numquam debitis culpa laudantium odio, velit vel minus sit? Veritatis aut maiores ducimus fugit error ex sit, dignissimos eum tempora perferendis a rem culpa ab aliquid modi? Est vitae neque esse, cumque, quam tenetur rem earum eaque mollitia modi ipsum aspernatur, dignissimos excepturi aliquam architecto soluta necessitatibus vero?"</p>
+        <h2>Dr. Muhammad Yunus</h2>
+        <h5>Chief Adviser of the People's Republic of Bangladesh</h5>
+      </div>
+    </section>
   </main>
   <footer>
 
