opinion section added done

--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
         <div class="future-card future-card-2">
           <img src="assets/card-icon.png" alt="card-icon">
           <h2>Green Energy</h2>
-          <p>Investments in solar and wind energy to ensure a sustainable and eco-friendly future to established electricity system.</p>
+          <p>Investments in solar and wind energy to ensure a sustainable and eco-friendly future to established
+            electricity system.</p>
           <a class="card-a-2" href="#">Learn More</a>
         </div>
         <div class="future-card future-card-3">
@@ -82,10 +83,52 @@
         </div>
       </div>
       <div class="yunus-speech">
-        <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quas, ducimus labore sequi quos deserunt optio id repellendus tempora veniam amet porro corporis exercitationem numquam debitis culpa laudantium odio, velit vel minus sit? Veritatis aut maiores ducimus fugit error ex sit, dignissimos eum tempora perferendis a rem culpa ab aliquid modi? Est vitae neque esse, cumque, quam tenetur rem earum eaque mollitia modi ipsum aspernatur, dignissimos excepturi aliquam architecto soluta necessitatibus vero?"</p>
+        <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quas, ducimus labore sequi quos deserunt
+          optio id repellendus tempora veniam amet porro corporis exercitationem numquam debitis culpa laudantium odio,
+          velit vel minus sit? Veritatis aut maiores ducimus fugit error ex sit, dignissimos eum tempora perferendis a
+          rem culpa ab aliquid modi? Est vitae neque esse, cumque, quam tenetur rem earum eaque mollitia modi ipsum
+          aspernatur, dignissimos excepturi aliquam architecto soluta necessitatibus vero?"</p>
         <h2>Dr. Muhammad Yunus</h2>
         <h5>Chief Adviser of the People's Republic of Bangladesh</h5>
       </div>
+    </section>
+    <!-- opinion section -->
+    <section class="opinion">
+      <h1>Your Opinion Matters</h1>
+      <div class="opinion-box">
+        <div class="opinion-header">
+          <h3>Questions</h3>
+          <h3>Select Your Opinion</h3>
+        </div>
+        <div class="opinion-option">
+          <h3>Do you believe Bangladesh is on the right path toward becoming a developed nation?</h3>
+          <select name="option" id="option">
+            <option value="volvo">Yes, I Agree</option>
+            <option value="saab">Yes, I Agree</option>
+            <option value="opel">Yes, I Agree</option>
+            <option value="audi">Yes, I Agree</option>
+          </select>
+        </div>
+        <div class="opinion-option">
+          <h3>Do you believe Bangladesh is on the right path toward becoming a developed nation?</h3>
+          <select name="option" id="option">
+            <option value="volvo">Yes, I Agree</option>
+            <option value="saab">Yes, I Agree</option>
+            <option value="opel">Yes, I Agree</option>
+            <option value="audi">Yes, I Agree</option>
+          </select>
+        </div>
+        <div class="opinion-option">
+          <h3>Do you believe Bangladesh is on the right path toward becoming a developed nation?</h3>
+          <select name="option" id="option">
+            <option value="volvo">Yes, I Agree</option>
+            <option value="saab">Yes, I Agree</option>
+            <option value="opel">Yes, I Agree</option>
+            <option value="audi">Yes, I Agree</option>
+          </select>
+        </div>
+      </div>
+
     </section>
   </main>
   <footer>
