--- a/index.html
+++ b/index.html
@@ -130,6 +130,58 @@
       </div>
 
     </section>
+    <!-- news section -->
+    <section class="news-section">
+      <h1>Recent News</h1>
+      <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting
+        inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and
+        robust infrastructure, the country is set to become a global model of development.</p>
+      <div class="news-1">
+        <img class="news-img" src="assets/satelite.png" alt="satelite">
+        <div class="news-content">
+          <h2>Bangladesh Launches New Satellite</h2>
+          <img src="assets/al-jazeera.png" alt="">
+          <div class="date-time">
+            <p>Date: 05/01/2025</p>
+            <p>Time: 10.25 PM</p>
+          </div>
+          <p>Not until the creation and maintenance of decent conditions of life for all people are recognized and
+            accepted as a common obligation of all people and all countries—not until then shall we,
+            with a certain degree of justification, be able to speak of humankind as civilized</p>
+          <a href="#">Read More</a>
+        </div>
+      </div>
+      <div class="news-2">
+        <div class="news-content news-content-2">
+          <h2>Bangladesh Launches New Satellite</h2>
+          <img src="assets/al-jazeera.png" alt="">
+          <div class="date-time">
+            <p>Date: 05/01/2025</p>
+            <p>Time: 10.25 PM</p>
+          </div>
+          <p>Not until the creation and maintenance of decent conditions of life for all people are recognized and
+            accepted as a common obligation of all people and all countries—not until then shall we,
+            with a certain degree of justification, be able to speak of humankind as civilized</p>
+          <a href="#">Read More</a>
+        </div>
+        <img class="news-img" src="assets/satelite.png" alt="satelite">
+      </div>
+      <div class="news-3">
+        <img class="news-img" src="assets/satelite.png" alt="satelite">
+        <div class="news-content">
+          <h2>Bangladesh Launches New Satellite</h2>
+          <img src="assets/al-jazeera.png" alt="">
+          <div class="date-time">
+            <p>Date: 05/01/2025</p>
+            <p>Time: 10.25 PM</p>
+          </div>
+          <p>Not until the creation and maintenance of decent conditions of life for all people are recognized and
+            accepted as a common obligation of all people and all countries—not until then shall we,
+            with a certain degree of justification, be able to speak of humankind as civilized</p>
+          <a href="#">Read More</a>
+        </div>
+      </div>
+    </section>
   </main>
   <footer>
 
