--- a/index.html
+++ b/index.html
@@ -182,6 +182,20 @@
         </div>
       </div>
     </section>
+    <!-- donate section -->
+    <section class="donate">
+      <h1>Donate Today</h1>
+      <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting
+        inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and
+        robust infrastructure.</p>
+      <button value="100">100 Taka</button>
+      <button value="200">200 Taka</button>
+      <button value="500">500 Taka</button>
+      <button value="1000">1000 Taka</button>
+      <br>
+      <input type="number" name="" id="other-amount" placeholder="Other Amount (Taka)">
+      <input type="submit" value="Donate Now" id="donate-button">
+    </section>
   </main>
   <footer>
 
