newsletter section added done

--- a/index.html
+++ b/index.html
@@ -196,6 +196,19 @@
       <input type="number" name="" id="other-amount" placeholder="Other Amount (Taka)">
       <input type="submit" value="Donate Now" id="donate-button">
     </section>
+    <!-- newsletter section -->
+    <section class="newsletter">
+      <div class="newsletter-content">
+        <h1>Subscribe Newsletter</h1>
+        <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting
+          inclusive growth.</p>
+        <div class="input-content">
+          <input type="email" name="email" id="email" placeholder="Enter your email here">
+          <input type="submit" value="Subscribe" id="subscribe">
+        </div>
+      </div>
+      <p>We promise not to spam you!</p>
+    </section>
   </main>
   <footer>
 
