footer section added done

--- a/index.html
+++ b/index.html
@@ -211,8 +211,18 @@
     </section>
   </main>
   <footer>
-
+    <h1>Our New Bangladesh</h1>
+    <hr>
+    <div>
+      <a href="#"><img src="assets/facebook.png" alt="facebook"></a>
+      <a href="#"><img src="assets/instagram.png" alt="instagram"></a>
+      <a href="#"><img src="assets/x.png" alt="x"></a>
+    </div>
+    <p>&copy; All Rights Reserved by <span>Jahirul Islam Tuku -</span> <span id="current-year"></span></p>
   </footer>
+  <script>
+    document.getElementById("current-year").innerHTML = new Date().getFullYear();
+  </script>
 </body>
 
 </html>
