--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
   <!-- header section -->
   <header>
     <nav>
-      <h1>Bangladesh 2.0</h1>
+      <h1>Our New Bangladesh</h1>
       <a href="">Sign In</a>
     </nav>
     <div class="bannar">
       <div>
-        <h2>Bangladesh 2.0</h2>
+        <h2>Our New Bangladesh</h2>
         <h1>Idea , innovation ,
           vision and challenges in New Bangladesh.</h1>
         <a href="#">Explore New Bangladesh</a>
@@ -30,7 +30,7 @@
   <main>
     <!-- pillars section -->
     <section class="pillars">
-      <h1>Pillars of "Bangladesh 2.0"</h1>
+      <h1>Pillars of "Our New Bangladesh"</h1>
       <div class="pillars-card-group">
         <div class="pillars-card">
           <img src="assets/card-icon.png" alt="card-icon">
@@ -103,28 +103,28 @@
         <div class="opinion-option">
           <h3>Do you believe Bangladesh is on the right path toward becoming a developed nation?</h3>
           <select name="option" id="option">
-            <option value="volvo">Yes, I Agree</option>
-            <option value="saab">Yes, I Agree</option>
-            <option value="opel">Yes, I Agree</option>
-            <option value="audi">Yes, I Agree</option>
+            <option value="Yes, I Agree">Yes, I Agree</option>
+            <option value="Absolutely, I agree">Absolutely, I agree</option>
+            <option value="Yes, that's right">Yes, that's right</option>
+            <option value="I feel the same way">I feel the same way</option>
           </select>
         </div>
         <div class="opinion-option">
           <h3>Do you believe Bangladesh is on the right path toward becoming a developed nation?</h3>
           <select name="option" id="option">
-            <option value="volvo">Yes, I Agree</option>
-            <option value="saab">Yes, I Agree</option>
-            <option value="opel">Yes, I Agree</option>
-            <option value="audi">Yes, I Agree</option>
+            <option value="Yes, I Agree">Yes, I Agree</option>
+            <option value="Absolutely, I agree">Absolutely, I agree</option>
+            <option value="Yes, that's right">Yes, that's right</option>
+            <option value="I feel the same way">I feel the same way</option>
           </select>
         </div>
         <div class="opinion-option">
           <h3>Do you believe Bangladesh is on the right path toward becoming a developed nation?</h3>
           <select name="option" id="option">
-            <option value="volvo">Yes, I Agree</option>
-            <option value="saab">Yes, I Agree</option>
-            <option value="opel">Yes, I Agree</option>
-            <option value="audi">Yes, I Agree</option>
+            <option value="Yes, I Agree">Yes, I Agree</option>
+            <option value="Absolutely, I agree">Absolutely, I agree</option>
+            <option value="Yes, that's right">Yes, that's right</option>
+            <option value="I feel the same way">I feel the same way</option>
           </select>
         </div>
       </div>
@@ -189,7 +189,7 @@
         inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and
         robust infrastructure.</p>
       <button value="100">100 Taka</button>
-      <button value="200">200 Taka</button>
+      <button value="200" id="two-hundred">200 Taka</button>
       <button value="500">500 Taka</button>
       <button value="1000">1000 Taka</button>
       <br>
@@ -210,6 +210,7 @@
       <p>We promise not to spam you!</p>
     </section>
   </main>
+  <!-- footer section -->
   <footer>
     <h1>Our New Bangladesh</h1>
     <hr>
@@ -220,6 +221,7 @@
     </div>
     <p>&copy; All Rights Reserved by <span>Jahirul Islam Tuku -</span> <span id="current-year"></span></p>
   </footer>
+  <!-- javascrip for footer section -->
   <script>
     document.getElementById("current-year").innerHTML = new Date().getFullYear();
   </script>
